Cleanup in preparation for initial review

--- a/helm/jenkins-k8s/values.yaml
+++ b/helm/jenkins-k8s/values.yaml
@@ -7,8 +7,8 @@ initContainerImage: "alpine:3.10.2"
 replicaCount: 1
 imagePullSecrets:
 image:
-  repository: anuphnu/jenkins
-  tag: v3
+  repository: jenkins/jenkins 
+  tag: lts
   pullPolicy: Always
 
   resources:
