--- a/helm/jenkins/jenkins-sa.yml
+++ b/helm/jenkins/jenkins-sa.yml
@@ -2,16 +2,16 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-    name: jenkins-dev
+    name: jenkins-dev-sa
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
     annotations:
-    rbac.authorization.kubernetes.io/autoupdate: "true"
+      rbac.authorization.kubernetes.io/autoupdate: "true"
     labels:
-    kubernetes.io/bootstrapping: rbac-defaults
-    name: jenkins-dev
+      kubernetes.io/bootstrapping: rbac-defaults
+    name: jenkins-dev-cr
 rules:
 - apiGroups:
     - '*'
@@ -62,14 +62,14 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
     annotations:
-    rbac.authorization.kubernetes.io/autoupdate: "true"
+      rbac.authorization.kubernetes.io/autoupdate: "true"
     labels:
-    kubernetes.io/bootstrapping: rbac-defaults
-    name: jenkins-dev
+      kubernetes.io/bootstrapping: rbac-defaults
+    name: jenkins-dev-crb 
 roleRef:
     apiGroup: rbac.authorization.k8s.io
     kind: ClusterRole
-    name: jenkins-dev
+    name: jenkins-dev-cr
 subjects:
 - apiGroup: rbac.authorization.k8s.io
     kind: Group
