--- a/helm/nexus/nexus-pv.yml
+++ b/helm/nexus/nexus-pv.yml
@@ -9,7 +9,8 @@ spec:
     storage: 1024Gi
   accessModes:
     - ReadWriteMany
+  volumeMode: Filesystem
   persistentVolumeReclaimPolicy: Retain
-  nfs:
-    server: <EFS_URL>
-    path: "/nexus_prd"
+  csi:
+    driver: efs.csi.aws.com
+    volumeHandle: <FS_ID>:/nexus_prd
