Updating Jenkins configuration with proper FQDN (devops-poc.com)

--- a/helm/jenkins/jenkins-values.yml
+++ b/helm/jenkins/jenkins-values.yml
@@ -11,7 +11,7 @@ namespaceOverride: jenkins-dev
 
 # For FQDN resolving of the master service. Change this value to match your existing configuration.
 # ref: https://github.com/kubernetes/dns/blob/master/docs/specification.md
-clusterZone: "cluster.local"
+clusterZone: "devops-poc.com"
 
 renderHelmLabels: true
 
