--- a/helm/jenkins/jenkins-values.yml
+++ b/helm/jenkins/jenkins-values.yml
@@ -66,7 +66,7 @@ master:
         6NnqtR4gEBF0ZVlQmkycFvD4EC2boP943dLqNUvop+4R3SM1QMM6P5u8iTXtHd/VN4MwMyy1wtog
         hYAzODo1Jt59pcqqKJEas0C/lFJEB3frw4ImNx5fNlJYOpx+ijfQs9m39CevDq0=
   # Used for label app.kubernetes.io/component
-  componentName: "jenkins-master"
+  componentName: "jenkins-dev"
   image: "jenkins/jenkins"
   tag: "lts"
   imagePullPolicy: "Always"
@@ -152,7 +152,7 @@ master:
   targetPort: 8080
   # For minikube, set this to NodePort, elsewhere use LoadBalancer
   # Use ClusterIP if your setup includes ingress controller
-  serviceType: LoadBalancer 
+  serviceType: NodePort 
   # Jenkins master service annotations
   serviceAnnotations: {}
   # Jenkins master custom labels
@@ -398,9 +398,13 @@ master:
   overwriteJobs: false
 
   ingress:
-    enabled: false
+    enabled: true
     # Override for the default paths that map requests to the backend
-    paths: []
+    paths:
+    - path: /jenkins
+      backend:
+        serviceName: jenkins-dev  
+        servicePort: 8080
     # - backend:
     #     serviceName: ssl-redirect
     #     servicePort: use-annotation
@@ -410,7 +414,7 @@ master:
     #     # Don't use string here, use only integer value!
     #     servicePort: 8080
     # For Kubernetes v1.14+, use 'networking.k8s.io/v1beta1'
-    apiVersion: "extensions/v1beta1"
+    apiVersion: "networking.k8s.io/v1beta1"
     labels: {}
     annotations: {}
     # kubernetes.io/ingress.class: nginx
@@ -418,7 +422,7 @@ master:
     # Set this path to jenkinsUriPrefix above or use annotations to rewrite path
     # path: "/jenkins"
     # configures the hostname e.g. jenkins.example.com
-    hostName:
+    hostName: devops-poc.com
     tls:
     # - secretName: jenkins.cluster.local
     #   hosts:
