--- a/helm/nexus/nexus-deploy.yml
+++ b/helm/nexus/nexus-deploy.yml
@@ -1,3 +1,4 @@
+# Sonatype Nexus Repository Manager and Associated Components
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -52,7 +53,7 @@ spec:
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
-----
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -69,7 +70,7 @@ spec:
     targetPort: 8081
   selector:
     app: nexus-prd 
-----
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -86,7 +87,7 @@ spec:
     targetPort: 5000
   selector:
     app: nexus-prd 
-----
+---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
@@ -101,7 +102,7 @@ spec:
         backend:
           serviceName: docker-reg 
           servicePort: 5000
-----
+---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
