--- a/helm/jenkins/jenkins-sa.yml
+++ b/helm/jenkins/jenkins-sa.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
     name: jenkins-dev
-    namespace: jenkins-dev
+    namespace: devops-poc 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -13,7 +13,7 @@ metadata:
     labels:
       kubernetes.io/bootstrapping: rbac-defaults
     name: jenkins-dev
-    namespace: jenkins-dev
+    namespace: devops-poc 
 rules:
 - apiGroups: ["*"]
   resources:
