Configure Jenkins DEV to use its own namespace

--- a/helm/haproxy/haproxy-values.yml
+++ b/helm/haproxy/haproxy-values.yml
@@ -38,7 +38,7 @@ rbac:
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/
 serviceAccount:
   create: true
-  name:
+  name: devops-poc-proxy-sa
 
 
 ## Controller default values
