--- a/helm/jenkins/jenkins-pv.yml
+++ b/helm/jenkins/jenkins-pv.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: jenkins-dev-pv
-  namespace: devops-poc 
+  namespace: jenkins-dev  
 spec:
   storageClassName: jenkins-dev-pv
   capacity:
@@ -21,7 +21,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jenkins-dev-pvc
-  namespace: devops-poc 
+  namespace: jenkins-dev  
 spec:
   accessModes:
     - ReadWriteMany
