--- a/experimental/proxy-test-app/proxy-test-app.yml
+++ b/experimental/proxy-test-app/proxy-test-app.yml
@@ -1,3 +1,14 @@
+###################################################
+# Basic application for testing Ingress Controllers
+# Currently usable for HAProxy and AWS Load Balancer Controller testing
+#
+# For HAProxy:
+#   - uncommehnt annotations in the 'Service' sections
+#  - comment the annotations in the 'Ingress' sections
+# For AWS Load Balancer Controller
+#  - uncomment annotations in the 'Ingress' sections
+#  - comment the annotations in the 'Service' sections
+
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -36,12 +47,14 @@ metadata:
     run: app-1
   name: app-1
   namespace: test-app
-  annotations:
-    haproxy.org/check: "enabled"
-    haproxy.org/forwarded-for: "enabled"
-    haproxy.org/load-balance: "roundrobin"
+# Uncomment these lines if using the HAProxy Ingress Controller
+#  annotations:
+#    haproxy.org/check: "enabled"
+#    haproxy.org/forwarded-for: "enabled"
+#    haproxy.org/load-balance: "roundrobin"
 spec:
-  type: ClusterIP
+# set type to 'ClusterIP' for HAProxy and 'NodePort' for AWS LBC
+  type: NodePort
   selector:
     run: app-1
   ports:
@@ -56,16 +69,17 @@ kind: Ingress
 metadata:
   name: test-ingress1
   namespace: test-app
+# Uncomment these lines if using the ALB Ingress Controller
   annotations:
-#    haproxy.org/set-host: "test1.devops-poc.com"
-#    kubernetes.io/ingress.class: alb
-#    alb.ingress.kubernetes.io/group.name: testApp
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+#    alb.ingress.kubernetes.io/group.name: test-app
 spec:
   rules:
   - host: test1.devops-poc.com
     http:
       paths:
-      - path: /
+      - path: /*
         backend:
           serviceName: app-1
           servicePort: 80
@@ -103,17 +117,19 @@ metadata:
     run: app-2
   name: app-2
   namespace: test-app
-  annotations:
-    haproxy.org/check: "enabled"
-    haproxy.org/forwarded-for: "enabled"
-    haproxy.org/load-balance: "roundrobin"
+# Uncomment these lines if using the HAProxy Ingress Controller
+#  annotations:
+#    haproxy.org/check: "enabled"
+#    haproxy.org/forwarded-for: "enabled"
+#    haproxy.org/load-balance: "roundrobin"
 spec:
-  type: ClusterIP
+# set type to 'ClusterIP' for HAProxy and 'NodePort' for AWS LBC
+  type: NodePort
   selector:
     run: app-2
   ports:
   - name: port-2
-    port: 80
+    port: 8080
     protocol: TCP
     targetPort: 8080
 
@@ -123,16 +139,17 @@ kind: Ingress
 metadata:
   name: test-ingress2
   namespace: test-app
+# Uncomment these lines if using the ALB Ingress Controller
   annotations:
-#    haproxy.org/set-host: "test2.devops-poc.com"
-#    kubernetes.io/ingress.class: alb
-#    alb.ingress.kubernetes.io/group.name: testApp
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+#    alb.ingress.kubernetes.io/group.name: test-app
 spec:
   rules:
   - host: test2.devops-poc.com
     http:
       paths:
-      - path: /
+      - path: /*
         backend:
           serviceName: app-2
-          servicePort: 80
+          servicePort: 8080
